--- a/alcs-frontend/src/app/features/application/decision/conditions/conditions.component.html
+++ b/alcs-frontend/src/app/features/application/decision/conditions/conditions.component.html
@@ -49,7 +49,7 @@
         <app-condition
           [ngClass]="{ 'condition-container': true, 'even-condition': j % 2 }"
           [condition]="condition"
-          [decision]="conditionDecision"
+          [isDraftDecision]="decision.isDraft"
         ></app-condition>
       </div>
     </div>
