--- a/alcs-frontend/src/app/features/application/proposal/proposal.component.html
+++ b/alcs-frontend/src/app/features/application/proposal/proposal.component.html
@@ -3,7 +3,7 @@
   <h5>Proposal Components - {{ application?.type?.label }}</h5>
   <div class="input-table">
     <div>
-      <div class="subheading2">ALR Area (ha)</div>
+      <div class="subheading2">Proposal ALR Area (ha)</div>
       <app-inline-number [value]="alrArea" (save)="onSaveAlrArea($event)"></app-inline-number>
     </div>
     <div>
@@ -44,6 +44,10 @@
     *ngIf="application && ['POFO', 'ROSO', 'PFRS'].includes(application.type.code)"
   ></app-proposal-soil>
   <app-proposal-naru *ngIf="application && application.type.code === 'NARU'"></app-proposal-naru>
+</section>
+<section>
+  <h5>Application Parcels</h5>
+  <app-parcel-prep *ngIf="application" [fileNumber]="application.fileNumber"></app-parcel-prep>
 </section>
 <section>
   <h5>Staff Comments and Observations</h5>
