--- a/alcs-frontend/src/app/features/application/proposal/parcel-prep/parcel-prep.component.html
+++ b/alcs-frontend/src/app/features/application/proposal/parcel-prep/parcel-prep.component.html
@@ -4,7 +4,7 @@
 
   <ng-container matColumnDef="number">
     <th mat-header-cell *matHeaderCellDef>#</th>
-    <td mat-cell *matCellDef="let row">1</td>
+    <td mat-cell *matCellDef="let row; let i = index">{{ i + 1 }}</td>
   </ng-container>
 
   <ng-container matColumnDef="pid">
