--- a/alcs-frontend/src/app/features/application/decision/conditions/condition/condition.component.html
+++ b/alcs-frontend/src/app/features/application/decision/conditions/condition/condition.component.html
@@ -13,7 +13,7 @@
 <div class="grid-3">
   <div>
     <div class="subheading2">Component to Condition</div>
-    Non- Farm Use #111222/ 2023
+    {{ condition.componentLabels }}
   </div>
 
   <div>
