fix for read more read less when description is empty

--- a/alcs-frontend/src/app/features/application/decision/conditions/condition/condition.component.html
+++ b/alcs-frontend/src/app/features/application/decision/conditions/condition/condition.component.html
@@ -60,7 +60,7 @@
       <a
         (click)="onToggleReadMore()"
         (keypress)="onToggleReadMore()"
-        [ngClass]="{ 'display-non': !isReadMoreVisible && condition.description }"
+        [ngClass]="{ 'display-non': !isReadMoreVisible || !condition.description }"
         >{{ isReadMoreClicked ? 'Read Less' : 'Read More' }}</a
       >
     </div>
