--- a/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
@@ -145,16 +145,16 @@
       <mat-button-toggle-group class="input" id="isFarm" formControlName="isFarm">
         <mat-button-toggle
           value="true"
-          [ngClass]="{ 'error-outline': parcelForm.touched || (isFarm.invalid && (isFarm.dirty || isFarm.touched)) }"
+          [ngClass]="{ 'error-outline': isFarm.invalid && (isFarm.dirty || isFarm.touched) }"
           >Yes</mat-button-toggle
         >
         <mat-button-toggle
           value="false"
-          [ngClass]="{ 'error-outline': parcelForm.touched || (isFarm.invalid && (isFarm.dirty || isFarm.touched)) }"
+          [ngClass]="{ 'error-outline': isFarm.invalid && (isFarm.dirty || isFarm.touched) }"
           >No</mat-button-toggle
         >
       </mat-button-toggle-group>
-      <div *ngIf="isFarm.invalid && (isFarm.dirty || isFarm.touched)" class="field-error">
+      <div *ngIf="showErrors && isFarm.invalid && (isFarm.dirty || isFarm.touched)" class="field-error">
         <mat-icon>warning</mat-icon>
         <div *ngIf="isFarm.errors?.['required']">This field is required</div>
       </div>
