--- a/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-submission/parcel-details/parcel-entry/parcel-entry.component.html
@@ -154,7 +154,7 @@
           >No</mat-button-toggle
         >
       </mat-button-toggle-group>
-      <div *ngIf="isFarm.invalid && (isFarm.dirty || isFarm.touched)" class="field-error">
+      <div *ngIf="showErrors && isFarm.invalid && (isFarm.dirty || isFarm.touched)" class="field-error">
         <mat-icon>warning</mat-icon>
         <div *ngIf="isFarm.errors?.['required']">This field is required</div>
       </div>
@@ -243,7 +243,7 @@
       </button>
       <div>
         <app-parcel-owners
-          [isDraft]='isDraft'
+          [isDraft]="isDraft"
           [fileId]="fileId"
           [submissionUuid]="submissionUuid"
           [parcelUuid]="parcel.uuid"
