--- a/alcs-frontend/src/app/features/application/lfng-info/lfng-info.component.html
+++ b/alcs-frontend/src/app/features/application/lfng-info/lfng-info.component.html
@@ -1,7 +1,15 @@
 <h3>L/FNG Info</h3>
 <section>
   <div *ngIf="!requiresReview" class="warning">
-    Application not subjected to Local/First Nation Government Review.
+    <mat-icon>info</mat-icon>Application not subjected to Local/First Nation Government Review.
+  </div>
+  <div *ngIf="!applicationReview && requiresReview && !showComment" class="warning">
+    <mat-icon>info</mat-icon>Pending Local/First Nation Government review.
+  </div>
+  <div *ngIf="showComment" class="comment-container">
+    <div><strong>Comment for Applicant</strong></div>
+    {{ submission?.returnedComment }}
+    <span class="no-comment" *ngIf="!submission?.returnedComment">No comment added</span>
   </div>
   <ng-container *ngIf="applicationReview">
     <h4>Government File & Contact</h4>
