--- a/alcs-frontend/src/app/features/application/lfng-info/lfng-info.component.scss
+++ b/alcs-frontend/src/app/features/application/lfng-info/lfng-info.component.scss
@@ -10,7 +10,29 @@ h4 {
 
 .warning {
   background-color: colors.$secondary-color-light;
+  border-radius: 4px;
   padding: 16px;
+  display: flex;
+  align-items: center;
+
+  mat-icon {
+    margin-right: 12px;
+  }
+}
+
+.comment-container {
+  @extend .warning;
+  flex-direction: column;
+  align-items: flex-start;
+
+  div {
+    margin-bottom: 4px;
+  }
+}
+
+.no-comment {
+  color: colors.$grey-dark;
+  font-style: italic;
 }
 
 .review-table {
