--- a/portal-frontend/src/app/features/home/application-list/application-list.component.html
+++ b/portal-frontend/src/app/features/home/application-list/application-list.component.html
@@ -32,7 +32,7 @@
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
         <td mat-cell *matCellDef="let row">
-          <div [className]="'label ' + statusToCssMap.get(row.status.code)">
+          <div *ngIf="row.status" [className]="'label ' + statusToCssMap.get(row.status.code)">
             {{ row.status.label }}
           </div>
         </td>
