--- a/alcs-frontend/src/app/features/application/decision/conditions/condition/condition.component.html
+++ b/alcs-frontend/src/app/features/application/decision/conditions/condition/condition.component.html
@@ -14,6 +14,7 @@
   <div>
     <div class="subheading2">Component to Condition</div>
     <span class="component-labels">{{ condition.componentLabels }}</span>
+    <app-no-data *ngIf="!condition.componentLabels"></app-no-data>
   </div>
 
   <div>
