--- a/alcs-frontend/src/app/features/application/application.component.html
+++ b/alcs-frontend/src/app/features/application/application.component.html
@@ -8,7 +8,7 @@
       heading="Application"
     ></app-details-header>
     <div class="content">
-      <div *ngIf="isSubmitted" class="nav">
+      <div *ngIf="isSubmittedToAlc" class="nav">
         <div *ngFor="let route of childRoutes" class="nav-link">
           <div
             *ngIf="route.portalOnly ? isApplicantSubmission : true"
@@ -22,7 +22,20 @@
           </div>
         </div>
       </div>
-      <div *ngIf="!isSubmitted" class="nav">
+      <div *ngIf="wasSubmittedToLfng" class="nav">
+        <div *ngFor="let route of submittedLfngRoutes" class="nav-link">
+          <div
+            [routerLink]="route.path ? route.path : './'"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: route.path === '' }"
+            class="nav-item nav-text"
+          >
+            <mat-icon>{{ route.icon }}</mat-icon>
+            {{ route.menuTitle }}
+          </div>
+        </div>
+      </div>
+      <div *ngIf="!isSubmittedToAlc && !wasSubmittedToLfng" class="nav">
         <div *ngFor="let route of unsubmittedRoutes" class="nav-link">
           <div
             [routerLink]="route.path ? route.path : './'"
