Update decision components field layout

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/naru/naru.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/naru/naru.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="subheading2">Non-Farm Use Type</div>
+  <div class="subheading2">Residential Use Type</div>
   {{ component.naruSubtype?.label }}
 </div>
 
