--- a/alcs-frontend/src/app/features/admin/board-management/board-management-dialog/board-management-dialog.component.scss
+++ b/alcs-frontend/src/app/features/admin/board-management/board-management-dialog/board-management-dialog.component.scss
@@ -33,9 +33,13 @@
     padding: 0;
   }
 
+  span {
+    font-size: 16px;
+  }
+
   .draggable {
     padding: 4px;
-    margin: 4px 0;
+    margin: 10px 0;
     background-color: colors.$grey-light;
 
     .mat-icon {
