Update decision component field layouts - Move common basic fields to separate component - Style field row by different app type components

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/naru/naru.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/naru/naru.component.html
@@ -1,5 +1,9 @@
+<div class="full-width" *ngIf="component.agCapMap || component.agCapConsultant">
+  <app-basic [component]="component" [fillRow]="true"></app-basic>
+</div>
+
 <div>
-  <div class="subheading2">Non-Farm Use Type</div>
+  <div class="subheading2">Residential Use Type</div>
   {{ component.naruSubtype?.label }}
 </div>
 
