--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/nfup/nfup.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/nfup/nfup.component.html
@@ -1,3 +1,6 @@
+<div class="full-width" *ngIf="component.agCapMap || component.agCapConsultant">
+  <app-basic [component]="component" [fillRow]="true"></app-basic>
+</div>
 <div>
   <div class="subheading2">Non-Farm Use Type</div>
   {{ component.nfuType }}
