--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/turp/turp.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/turp/turp.component.html
@@ -1,4 +1,13 @@
-<div class="full-width">
-  <div class="subheading2">Expiry Date</div>
-  {{ component.expiryDate | date }}
+<div
+  class="full-width"
+  [ngClass]="{
+    'grid-uneven': component.agCapMap && component.agCapConsultant,
+    'grid-3': !component.agCapMap || !component.agCapConsultant
+  }"
+>
+  <app-basic [component]="component" *ngIf="component.agCapMap || component.agCapConsultant"></app-basic>
+  <div>
+    <div class="subheading2">Expiry Date</div>
+    {{ component.expiryDate | date }}
+  </div>
 </div>
