Map created and updated date for Submissions

--- a/portal-frontend/src/app/features/view-submission/view-submission.component.html
+++ b/portal-frontend/src/app/features/view-submission/view-submission.component.html
@@ -23,7 +23,7 @@
   <div class="banner-status">
     <div>
       <div class="subheading2">Status Date</div>
-      <span *ngIf="application">{{ application.updatedAt | date }}</span>
+      <span *ngIf="application">{{ application.lastStatusUpdate | date }}</span>
     </div>
     <div>
       <div class="subheading2">Application Status</div>
