--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-input/decision-input-v2.component.html
@@ -208,6 +208,7 @@
         *ngIf="codes && showComponents && showConditions"
         [codes]="codes"
         [components]="components"
+        [conditions]="conditions"
         (conditionsChange)="onConditionsChange($event)"
       ></app-decision-conditions>
     </div>
