--- a/portal-frontend/src/app/features/view-submission/view-submission.component.html
+++ b/portal-frontend/src/app/features/view-submission/view-submission.component.html
@@ -243,7 +243,7 @@
   <button (click)="onReview(application.fileNumber)" mat-button>
     <div>
       <span
-        *ngIf="application.status.code === SUBMISSION_STATUS.IN_REVIEW_BY_FG"
+        *ngIf="application.status.code === SUBMISSION_STATUS.IN_REVIEW_BY_LG"
         (click)="onReview(application.fileNumber)"
         class="subheading2"
         >Continue Application Review</span
