--- a/portal-frontend/src/app/features/view-submission/alc-review/alc-review.component.html
+++ b/portal-frontend/src/app/features/view-submission/alc-review/alc-review.component.html
@@ -18,7 +18,7 @@
   <div
     *ngIf="
       application.status.code === SUBMISSION_STATUS.IN_PROGRESS ||
-      application.status.code === SUBMISSION_STATUS.IN_REVIEW_BY_FG ||
+      application.status.code === SUBMISSION_STATUS.IN_REVIEW_BY_LG ||
       application.status.code === SUBMISSION_STATUS.INCOMPLETE ||
       application.status.code === SUBMISSION_STATUS.WRONG_GOV ||
       application.status.code === SUBMISSION_STATUS.SUBMITTED_TO_LG
