wip status colours

--- a/portal-frontend/src/app/features/home/application-list/application-list.component.scss
+++ b/portal-frontend/src/app/features/home/application-list/application-list.component.scss
@@ -9,33 +9,31 @@
 }
 
 .incomplete,
-.wrong-government {
+.wrong-government,
+.refused-to-forward,
+.alc-incomplete {
   background-color: colors.$accent-color-light;
   color: colors.$accent-color-dark;
 }
 
 .submitted-to-alc,
-.submitted-to-lg {
+.submitted-to-lg,
+.alc-decision {
   background-color: colors.$primary-color-light;
   color: colors.$primary-color-dark;
 }
 
 .in-progress,
-.in-review {
+.in-review,
+.in-review-alcs,
+.alc-received {
   background-color: colors.$secondary-color-light;
   color: colors.$secondary-color-dark;
 }
 
-.cancelled,
-.refused-to-forward {
+.cancelled {
   background-color: colors.$grey-light;
   color: colors.$grey-dark;
-}
-
-.alc-decision,
-.ceo-decision {
-  background-color: #C08106;
-  color: white;
 }
 
 .table-wrapper {
