--- a/portal-frontend/src/app/features/home/application-list/application-list.component.html
+++ b/portal-frontend/src/app/features/home/application-list/application-list.component.html
@@ -32,7 +32,11 @@
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Status</th>
         <td mat-cell *matCellDef="let row">
-          <div *ngIf="row.status" [className]="'label ' + statusToCssMap.get(row.status.code)">
+          <div
+            *ngIf="row.status"
+            class="label"
+            [style]="{ 'background-color': row.status.portalBackgroundColor, color: row.status.portalColor }"
+          >
             {{ row.status.label }}
           </div>
         </td>
