--- a/alcs-frontend/src/app/features/application/review/review.component.html
+++ b/alcs-frontend/src/app/features/application/review/review.component.html
@@ -1,10 +1,7 @@
 <h3>Review</h3>
 <div class="notification-date">
-  <div class="subheading1">'Ready for Review' Notification Sent to Applicant</div>
-  <app-inline-datepicker
-    [value]="notificationSentDate"
-    (save)="onSaveNotificationDate($event)"
-  ></app-inline-datepicker>
+  <div class="subheading1">Applicant Notified to Review Evidentiary Record</div>
+  <app-inline-datepicker [value]="notificationSentDate" (save)="onSaveNotificationDate($event)"></app-inline-datepicker>
 </div>
 <section>
   <app-decision-meeting [fileNumber]="fileNumber"></app-decision-meeting>
