--- a/alcs-frontend/src/app/features/application/review/decision-meeting/decision-meeting.component.scss
+++ b/alcs-frontend/src/app/features/application/review/decision-meeting/decision-meeting.component.scss
@@ -38,3 +38,15 @@
   width: 21%;
   text-align: right;
 }
+
+.icon {
+  margin-top: 4px;
+  height: 20px;
+  width: 20px;
+  font-size: 20px;
+}
+
+.label-wrapper {
+  display: flex;
+  gap: 8px;
+}
