added statuses controller

--- a/alcs-frontend/src/app/shared/details-header/details-header.component.html
+++ b/alcs-frontend/src/app/shared/details-header/details-header.component.html
@@ -49,5 +49,9 @@
       <div class="subheading2">{{ days }}:</div>
       <app-time-tracker [data]="_application" [maxActiveDays]="isNOI ? 61 : undefined"></app-time-tracker>
     </div>
+    <div>
+      <!-- TODO add status here -->
+      <!-- <div style=""></div> -->
+    </div>
   </div>
 </div>
