--- a/alcs-frontend/src/app/features/application/overview/overview.component.html
+++ b/alcs-frontend/src/app/features/application/overview/overview.component.html
@@ -1,4 +1,14 @@
-<h3>Overview</h3>
+<div class="split">
+  <h3>Overview</h3>
+  <div>
+    <button *ngIf="!isCancelled" type="button" mat-stroked-button color="warn" (click)="onCancelApplication()">
+      Cancel Application
+    </button>
+    <button *ngIf="isCancelled" type="button" mat-stroked-button color="primary" (click)="onUncancelApplication()">
+      Uncancel Application
+    </button>
+  </div>
+</div>
 <section>
   <h5>Proposal Summary</h5>
   <app-inline-edit
@@ -8,7 +18,7 @@
   ></app-inline-edit>
 </section>
 <section>
-  <app-staff-journal *ngIf="application" parentType='Application' [parentUuid]="application.uuid" />
+  <app-staff-journal *ngIf="application" parentType="Application" [parentUuid]="application.uuid" />
 </section>
 <section>
   <h5>Application Event Timeline</h5>
