portal statuses in ALCS

--- a/alcs-frontend/src/app/features/application/application.component.html
+++ b/alcs-frontend/src/app/features/application/application.component.html
@@ -6,6 +6,7 @@
       [modifications]="modifications"
       days="Business Days"
       heading="Application"
+      [showStatus]="true"
     ></app-details-header>
     <div class="content">
       <div *ngIf="isSubmittedToAlc" class="nav">
