--- a/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/application/application-dialog.component.html
@@ -41,6 +41,10 @@
   <div class="header-row">
     <div class="left">
       <app-time-tracker [data]="application"></app-time-tracker>
+      <app-application-submission-status-type-pill
+        *ngIf="status"
+        [type]="status"
+      ></app-application-submission-status-type-pill>
     </div>
     <div class="right">
       <button matTooltip="Move Board" [matMenuTriggerFor]="moveMenu" mat-icon-button>
