Add Cancel/Uncancel Application
* Add pill to revert to draft decision dialog

--- a/alcs-frontend/src/app/shared/confirmation-dialog/confirmation-dialog.component.scss
+++ b/alcs-frontend/src/app/shared/confirmation-dialog/confirmation-dialog.component.scss
@@ -1,3 +1,9 @@
 .mat-dialog-actions {
   justify-content: flex-end;
 }
+
+.card-title {
+  align-items: center;
+  margin-right: 2rem !important;
+  margin-bottom: 2rem;
+}
