--- a/alcs-frontend/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
+++ b/alcs-frontend/src/app/shared/confirmation-dialog/confirmation-dialog.component.html
@@ -1,3 +1,6 @@
+<div class="card-title" *ngIf="data.title" mat-dialog-title>
+  <h2>{{ data.title }}</h2>
+</div>
 <div mat-dialog-content>
   <p>{{ data.body }}</p>
 </div>
