Constrain dialogs to stay inside the screen
* Remove manual scroll bac from board dialog
* Change max-height to 80vh so the dialog stays on the screen

--- a/alcs-frontend/src/styles.scss
+++ b/alcs-frontend/src/styles.scss
@@ -169,10 +169,11 @@ body {
       flex-direction: column;
       height: 100%;
     }
+
     mat-dialog-content,
     div[mat-dialog-content] {
       flex-grow: 1;
-      max-height: unset;
+      max-height: 80vh;
     }
   }
 }
