Code Review Feedback

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/release-dialog/release-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/release-dialog/release-dialog.component.html
@@ -8,7 +8,7 @@
       decision will be visible to the Public after the prescribed amount of days is exhausted.
     </p>
     <p>
-      Upon releasing the decision, the application will be will be updated to the status:
+      Upon releasing the decision, the application will be updated to the status:
       <app-application-type-pill *ngIf="mappedType" [type]="mappedType"></app-application-type-pill>
     </p>
     <app-warning-banner> If there is more than one decision, the status will not change</app-warning-banner>
