--- a/alcs-frontend/src/app/features/application/decision/decision-v2/revert-to-draft-dialog/revert-to-draft-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/revert-to-draft-dialog/revert-to-draft-dialog.component.html
@@ -8,7 +8,7 @@
       hiding it from the Applicant, Local/First Nation Government, and the Public.
     </p>
     <p>
-      Upon reverting the decision to draft, the application will be will be updated to the status:
+      Upon reverting the decision to draft, the application will be updated to the status:
       <app-application-submission-status-type-pill
         *ngIf="mappedType"
         [type]="mappedType"
